--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <version>1.6.3</version>
         </dependency>
 
+      <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-core</artifactId>
+      </dependency>
+
 
     </dependencies>
 
